--- a/css/style.css
+++ b/css/style.css
@@ -505,6 +505,7 @@ h1, h2, h3, h4, h5, h6, figure {
   background: #7ED321;
   width: 100%;
   float: left;
+  margin-bottom: 38px;
 }
 #gtco-about .img-shadow img {
   position: relative;
