--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -312,6 +312,7 @@ th {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+  text-align:center;
 }
 
 *:before,
