--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,7 @@ h1, h2, h3, h4, h5, h6, figure {
 .gtco-nav ul {
   padding: 0;
   margin: 1px 0 0 0;
+  text-align: left;
 }
 .gtco-nav ul li {
   padding: 0;
